# 2048-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  check_env.py  export_weights.py  test_phase3.py  train.py  train_loop.sh
.github/workflows/: cmake.yml
ai/: agent.py  tuple_network.py
logs/: README.md
pybind/: CMakeLists.txt  bindings.cpp
python/gym2048/: __init__.py  env.py
src/: CMakeLists.txt  main-gui.cpp  main.cpp
src/core/: CMakeLists.txt  ai_solver.cpp  ai_solver.h  board.cpp  board.h  config.h  game-observer.h  game-saver.cpp  game-saver.h  lookup_table.cpp  lookup_table.h  transposition_table.cpp  transposition_table.h  types.h
src/game/: CMakeLists.txt  game.cpp  game.h
src/gui/: CMakeLists.txt  gui-game.cpp  gui-game.h  raylib-renderer.cpp  raylib-renderer.h  theme.h
src/input/: CMakeLists.txt  input-handler.cpp  input-handler.h
src/platform/: CMakeLists.txt  platform.cpp  platform.h
src/python-binding/: CMakeLists.txt  bindings.cpp
src/renderer/: CMakeLists.txt  console-renderer.cpp  console-renderer.h
src/score/: CMakeLists.txt  score-manager.cpp  score-manager.h
src/train/: CMakeLists.txt  main_train.cpp  trainer.cpp  trainer.h
src/utils/: CMakeLists.txt  random-generator.cpp  random-generator.h
tests/: CMakeLists.txt  board-test.cpp
